--- a/adm.html
+++ b/adm.html
@@ -310,19 +310,20 @@ if (novoStatus === "ENTREGUE" && !req.produto_id_vf) {
 
 
   
-const token = localStorage.getItem("vf_token");
+const vf_token = localStorage.getItem("vf_token");
 
 const r = await fetch("/api/requisicao-sync", {
   method: "POST",
   headers: {
-    "Content-Type": "application/json",
-    "Authorization": token
+    "Content-Type": "application/json"
   },
   body: JSON.stringify({
     requisicao: req,
-    novoStatus
+    novoStatus,
+    vf_token
   })
 });
+
 
 
 
